--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
 <p>In this case JavaScript changes the value of the src (source) attribute of an image.</p>
 
-<button onclick="document.getElementById('myImage').src='./images/lightbulbon.png'">Turn on the light</button>
+<button onclick="document.getElementById('myImage').src='./images/mechanical.gif'">The Twins</button>
 
-<img id="myImage" src="./images/lightbulboff.png" style="width:100px">
+<img id="myImage" src="./images/non-mechanical.gif" style="width:80px">
 
-<button onclick="document.getElementById('myImage').src='./images/lightbulbon.png'">Turn off the light</button>
+<button onclick="document.getElementById('myImage').src='./images/non-mechanical.gif'">Eye of Cthulhu</button>
+<button onclick="getElementById('demo').innerHTML = Date()">text button</button>
 
 </body>
 </html>
